--- a/_posts/2016-10-28-104711.markdown
+++ b/_posts/2016-10-28-104711.markdown
@@ -9,7 +9,7 @@ hidden: true
 
 Today I am going to introduce my recent work about a scalable stochastic search algorithm for high-dimensional Bayesian variable selection, which is called "Simplified Shotgun Stochastic Search with Screening" (S5). This algorithm is not only super-fast and efficient, but it is also scalable in a sense that the computational cost is robust to the dimension $$p$$.  
 
-I was writing a paper about [a high-dimensional Bayesian variable selection method](http://www.stat.tamu.edu/~minsuk/publications/nonlocal_sinica7.dpf). I was so naive to try to examine 3 settings with different 40 tuning parameters and 100 datasets with $$p$$=20000$$; total 12,000 high-dimensional  datasets. I found that for a each dataset it was expected to take about 2 hours and the total simulation time was estimated about **1,000 days**. Even if I used multiple cores for the computation, it was still not feasible. Practically to do the simulation, I needed some algorithm not only giving me results within **10 seconds**, but also providing an efficient uncertainty identification of the model space.
+I was writing a paper about [a high-dimensional Bayesian variable selection method](http://www.stat.tamu.edu/~minsuk/publications/nonlocal_sinica7.dpf). I was so naive to try to examine 3 settings with different 40 tuning parameters and 100 datasets with $$p $$ =20000; total 12,000 high-dimensional  datasets. I found that for a each dataset it was expected to take about 2 hours and the total simulation time was estimated about **1,000 days**. Even if I used multiple cores for the computation, it was still not feasible. Practically to do the simulation, I needed some algorithm not only giving me results within **10 seconds**, but also providing an efficient uncertainty identification of the model space.
 
 
 
