--- a/_posts/2016-10-28-104711.markdown
+++ b/_posts/2016-10-28-104711.markdown
@@ -30,7 +30,22 @@ $$
 
  where $$m_{\bf k}(y)$$ is the marginal likelihood of the model $${\bf k}$$ and $$\pi({\bf k})$$ is its model prior.
 
-However, the problem is that there exist too many possible models; the total number of possible models is $$2^p$$. Even when p is moderate, saying 50, we cannot evaluate $$2^50$$ number of marginal likelihoods.
+However, the problem is that there exist too many possible models; the total number of possible models is $$2^p$$. Even when $$p$$ is moderate, saying 50, we cannot evaluate $$2^50$$ number of marginal likelihoods. 
+
+### Issues
+ *Markov Chain Monte Carlo* (MCMC) has been popular to approximate the posterior model probability. However, the fact that the computational efficiency of MCMC is not scalable (heavily depends on the dimension $$p$$ and length of the chain) hinders the usage of the algorithm in high-dimensional settings. To overcome this issue, [George and Rockova (2015)](http://www.tandfonline.com/doi/abs/10.1080/01621459.2013.869223?journalCode=uasa20) proposed a deterministic approach using the *Expectation-Maximization* (EM) algorithm, but it can be only applied to continous mixtures of spike and slab priors, while the above procedure is with discrete mixtures. Moreover, the interpretation of the approximated latent variable by the EM algorithm is not clear, since it actually does not fully incorporate the posterior model probability. 
+ 
+ ### Shotgun Stochastic Search (SSS)
+   
+
+
+
+
+
+
+
+  
+
 
 
 
