--- a/_posts/2016-10-28-104711.markdown
+++ b/_posts/2016-10-28-104711.markdown
@@ -39,7 +39,7 @@ However, the problem is that there exist too many possible models; the total num
   To overcome this issue, [Hans et al. (2007)](https://pdfs.semanticscholar.org/1f65/77bd4f6ce85a5637a52b18ab63b26cc74d65.pdf) proposed the *Shotgun Stochastic Search* (SSS) algorithm that efficiently explores the model space. By searching the neighborhood of a current model at each iteration, the SSS stochastically chooses which model to move. More specifically, define the neighborhood of a model $${\bf k}$$ as
 
 $$
-nbd(\bk)=\{ \Gamma^+,\Gamma^-,\Gamma^0 \}
+nbd({\bf k })=\{ \Gamma^+,\Gamma^-,\Gamma^0 \}
 $$
 
 
