--- a/_posts/2016-11-27-122522.markdown
+++ b/_posts/2016-11-27-122522.markdown
@@ -7,6 +7,4 @@ comments: true
 draft: true
 ---
 
-This is 
-
-
+ Yesterday, I found an interesting paper from arxiv. It is about *Model Confidence Bounds*. 
