--- a/_posts/2016-11-27-122522.markdown
+++ b/_posts/2016-11-27-122522.markdown
@@ -7,4 +7,4 @@ comments: true
 draft: true
 ---
 
- Yesterday, I found an interesting paper from arxiv. It is about *Model Confidence Bounds*. 
+ Yesterday, I found an interesting paper from arxiv. It is about *Model Confidence Bounds* which is an extension of confidence sets in real-valued parameters to model spaces for variable selection.
